--- a/src/main/resources/fxml/entity_list.fxml
+++ b/src/main/resources/fxml/entity_list.fxml
@@ -13,25 +13,28 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
-		fx:controller="de.algorythm.jdoe.controller.MainController">
+	fx:controller="de.algorythm.jdoe.controller.MainController">
 	<top>
 		<ToolBar>
-			<Label fx:id="currentDatabaseLabel"/>
-			<Button text="open" onAction="#openDatabase"/>
-			<Button text="configure" onAction="#showTypeEditor"/>
-			<Region prefWidth="50"/>
-			<TextField fx:id="searchField" promptText="Search ..." prefWidth="200"/>
-			<ComboBox fx:id="typeComboBox"/>
-			<Button text="new" onAction="#createEntity"/>
+			<Label fx:id="currentDatabaseLabel" />
+			<Button text="open" onAction="#openDatabase" />
+			<Button text="configure" onAction="#showTypeEditor" />
+			<Region prefWidth="50" />
+			<TextField fx:id="searchField" promptText="Search ..."
+				prefWidth="200" />
+			<ComboBox fx:id="typeComboBox" />
+			<MenuButton fx:id="newEntityButton" contentDisplay="RIGHT" text="Neu"/>
 		</ToolBar>
 	</top>
 	<center>
 		<TabPane fx:id="tabs">
 			<tabs>
 				<Tab fx:id="listTab" id="list" text="Results" closable="false">
-					<TableView fx:id="entityList"/>
+					<TableView fx:id="entityList" />
 				</Tab>
 			</tabs>
 		</TabPane>
