--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -31,6 +31,12 @@
 .toolbar-button {
 	-fx-effect: null;
 }
+
+.notification {
+	-fx-background-color: #eeeeee;
+	-fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
+}
+
 /* Component specific styles */
 .hello-message {
     -fx-text-fill: #AA0000;
