--- a/src/main/resources/fxml/entity_editor.fxml
+++ b/src/main/resources/fxml/entity_editor.fxml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import de.algorythm.jdoe.ui.jfx.model.EditorStateModel?>
+<?import javafx.beans.property.SimpleBooleanProperty?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.geometry.Insets?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
-		fx:controller="de.algorythm.jdoe.controller.EntityEditorController">
+		fx:controller="de.algorythm.jdoe.controller.EntityEditorController"
+		disable="${editorState.disable}">
+	<fx:define>
+		<EditorStateModel fx:id="editorState" />
+	</fx:define>
 	<top>
 		<ToolBar>
 			<Button text="delete" onAction="#delete"/>
@@ -23,7 +22,13 @@
 		</ToolBar>
 	</top>
 	<center>
-		<ScrollPane fx:id="scrollPane"/>
+		<ScrollPane>
+			<GridPane fx:id="gridPane" vgap="20" hgap="10">
+				<padding>
+					<Insets bottom="20" left="20" right="20" top="20"/>
+				</padding>
+			</GridPane>
+		</ScrollPane>
 	</center>
 	<bottom>
 		<Button text="save" onAction="#save"/>
