--- a/src/main/resources/fxml/entity_editor.fxml
+++ b/src/main/resources/fxml/entity_editor.fxml
@@ -7,9 +7,12 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.RowConstraints?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
 		fx:controller="de.algorythm.jdoe.controller.EntityEditorController"
+		stylesheets="/styles/formstate.css"
 		disable="${editorState.disable}">
 	<fx:define>
 		<EditorStateModel fx:id="editorState" />
@@ -22,7 +25,7 @@
 	</top>
 	<center>
 		<ScrollPane>
-			<GridPane fx:id="gridPane" vgap="20" hgap="10">
+			<GridPane fx:id="gridPane" vgap="20" hgap="20">
 				<padding>
 					<Insets bottom="20" left="20" right="20" top="20"/>
 				</padding>
