--- a/src/main/resources/fxml/status.fxml
+++ b/src/main/resources/fxml/status.fxml
@@ -12,7 +12,7 @@
 <BorderPane xmlns:fx="http://javafx.com/fxml"
 	fx:controller="de.algorythm.jdoe.controller.StatusController">
 	<left>
-		<Label fx:id="status" BorderPane.alignment="BOTTOM_RIGHT"/>
+		<Label fx:id="status" BorderPane.alignment="BOTTOM_LEFT"/>
 	</left>
 	<right>
 		<HBox BorderPane.alignment="BOTTOM_RIGHT">
