--- a/src/main/resources/fxml/status.fxml
+++ b/src/main/resources/fxml/status.fxml
@@ -15,22 +15,10 @@
 		<Label fx:id="status" BorderPane.alignment="BOTTOM_LEFT"/>
 	</left>
 	<right>
-		<HBox BorderPane.alignment="BOTTOM_RIGHT">
-			<ProgressBar fx:id="progress" visible="false">
-				<HBox.margin>
-					<Insets top="9" right="7"/>
-				</HBox.margin>
-			</ProgressBar>
-			<Button text="Errors">
-				<HBox.margin>
-					<Insets top="2" right="2" bottom="2" left="2"/>
-				</HBox.margin>
-			</Button>
-			<Button text="Details">
-				<HBox.margin>
-					<Insets top="2" right="2" bottom="2" left="2"/>
-				</HBox.margin>
-			</Button>
-		</HBox>
+		<ProgressBar fx:id="progress" visible="false" BorderPane.alignment="BOTTOM_RIGHT">
+			<HBox.margin>
+				<Insets top="9" right="7"/>
+			</HBox.margin>
+		</ProgressBar>
 	</right>
 </BorderPane>
