--- a/src/main/resources/fxml/status.fxml
+++ b/src/main/resources/fxml/status.fxml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.control.ProgressBar?>
-<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.geometry.Insets?>
 
-<BorderPane xmlns:fx="http://javafx.com/fxml"
-	fx:controller="de.algorythm.jdoe.controller.StatusController">
-	<left>
-		<Label fx:id="status" BorderPane.alignment="BOTTOM_LEFT"/>
-	</left>
-	<right>
-		<ProgressBar fx:id="progress" visible="false" BorderPane.alignment="BOTTOM_RIGHT">
-			<HBox.margin>
-				<Insets top="9" right="7"/>
-			</HBox.margin>
-		</ProgressBar>
-	</right>
-</BorderPane>
+<StackPane xmlns:fx="http://javafx.com/fxml"
+		fx:controller="de.algorythm.jdoe.controller.StatusController"
+		alignment="CENTER_LEFT"
+		fx:id="statusPane">
+	<ProgressBar fx:id="progress" prefWidth="Infinity" maxHeight="Infinity" progress="1.0"/>
+	<Label fx:id="status">
+		<StackPane.margin>
+			<Insets top="2" right="2" bottom="2" left="2"/>
+		</StackPane.margin>
+	</Label>
+</StackPane>
