--- a/src/main/resources/styles/color.css
+++ b/src/main/resources/styles/color.css
@@ -1,5 +1,13 @@
 .root {
-	-fx-base: #d0d0d0;
-	-fx-background: #f0f0f0;
-	-fx-control-inner-background: #ffffff;
+	-fx-base: #D0D0D0;
+	-fx-background: #F0F0F0;
+	-fx-control-inner-background: #FFFFFF;
+}
+
+.taskStatusMessage {
+	-fx-font-size: 9px;
+}
+
+.taskProgress {
+	-fx-accent: #AADDFF;
 }
