containments can be saved with UI feedback due to FXTransactionTask as subtask of a transaction within a task

--- a/src/main/resources/styles/color.css
+++ b/src/main/resources/styles/color.css
@@ -2,6 +2,7 @@
 	-fx-base: #D0D0D0;
 	-fx-background: #F0F0F0;
 	-fx-control-inner-background: #FFFFFF;
+	/*-fx-font-size: 20px;*/
 }
 
 .taskStatusMessage {
