--- a/src/main/resources/fxml/entity_editor.fxml
+++ b/src/main/resources/fxml/entity_editor.fxml
@@ -26,7 +26,7 @@
 	</fx:define>
 	<VBox fillWidth="true">
 		<ToolBar prefHeight="33">
-			<Button text="%delete" onAction="#delete"/>
+			<Button text="%delete" onAction="#delete" disable="${editorState.creating}"/>
 			<Button text="%save" onAction="#save" fx:id="saveButton" disable="${editorState.pristine}"/>
 		</ToolBar>
 		<ScrollPane VBox.vgrow="ALWAYS" fitToWidth="true" fitToHeight="true">
