--- a/src/main/resources/styles/color.css
+++ b/src/main/resources/styles/color.css
@@ -2,7 +2,6 @@
 	-fx-base: #D0D0D0;
 	-fx-background: #F0F0F0;
 	-fx-control-inner-background: #FFFFFF;
-	/*-fx-font-size: 20px;*/
 }
 
 .taskStatusMessage {
@@ -11,4 +10,8 @@
 
 .taskProgress {
 	-fx-accent: #AADDFF;
+}
+
+.tab.unsaved .tab-label {
+	-fx-text-fill: #0093dd;
 }
