--- a/src/main/resources/fxml/jdoe.fxml
+++ b/src/main/resources/fxml/jdoe.fxml
@@ -18,7 +18,11 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.SplitPane?>
 <?import de.algorythm.jdoe.ui.jfx.model.ApplicationStateModel?>
+<?import de.algorythm.jdoe.ui.jfx.controls.FXEntityTableView?>
+<?import de.algorythm.jdoe.ui.jfx.controls.FXEntityDetailView?>
+<?import javafx.scene.control.ScrollPane?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
 	fx:controller="de.algorythm.jdoe.controller.MainController"
@@ -27,7 +31,6 @@
 		<ApplicationStateModel fx:id="appState"/>
 	</fx:define>
 	<top>
-		<!-- <ToolBar maxWidth="Infinity"> -->
 		<ToolBar>
 			<Label fx:id="currentDatabaseLabel"/>
 			<Button text="%open" onAction="#showDatabaseOpenDialog" fx:id="openDbButton"/>
@@ -39,13 +42,17 @@
 			<Region HBox.hgrow="ALWAYS"/>
 			<MenuButton fx:id="newEntityButton" text="%newEntity" disable="${appState.dbClosed}"/>
 		</ToolBar>
-		<!-- </ToolBar> -->
 	</top>
 	<center>
 		<TabPane fx:id="tabs" disable="${appState.dbClosed}">
 			<tabs>
 				<Tab fx:id="listTab" id="list" text="%results" closable="false">
-					<TableView fx:id="entityList" />
+					<SplitPane dividerPositions="1.0, 0.3">
+						<FXEntityTableView fx:id="entityTable" />
+						<ScrollPane>
+							<FXEntityDetailView fx:id="entityDetails" />
+						</ScrollPane>
+					</SplitPane>
 				</Tab>
 			</tabs>
 		</TabPane>
