--- a/src/main/resources/fxml/type_editor.fxml
+++ b/src/main/resources/fxml/type_editor.fxml
@@ -13,41 +13,68 @@
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
-		fx:controller="de.algorythm.jddb.controller.TypeEditorController">
+	fx:controller="de.algorythm.jddb.controller.TypeEditorController">
 	<top>
-		<Label text="${controller.errorMessage}" styleClass="error"/>
+		<Label text="${controller.errorMessage}" styleClass="error" />
 	</top>
 	<center>
 		<SplitPane dividerPositions="0.4,0.6">
 			<BorderPane>
 				<top>
 					<ToolBar>
-						<Label text="%types"/>
-						<Region prefWidth="30"/>
-						<Button text="%add" onAction="#addType" styleClass="toolbar-button"/>
+						<Label text="%types" />
+						<Region prefWidth="30" />
+						<Button text="%add" onAction="#addType" styleClass="toolbar-button">
+							<graphic>
+								<ImageView>
+									<image>
+										<Image backgroundLoading="true" url="/jddb-icons/plus.png" />
+									</image>
+								</ImageView>
+							</graphic>
+						</Button>
 					</ToolBar>
 				</top>
 				<center>
-					<ListView fx:id="typeList"/>
+					<ListView fx:id="typeList" />
 				</center>
 			</BorderPane>
 			<BorderPane>
 				<top>
 					<ToolBar>
-						<Label text="%properties"/>
-						<Region prefWidth="30"/>
-						<Button fx:id="btnAddProperty" text="%add" onAction="#addProperty" styleClass="toolbar-button" disable="${controller.noTypeSelected}"/>
+						<Label text="%properties" />
+						<Region prefWidth="30" />
+						<Button fx:id="btnAddProperty" text="%add" onAction="#addProperty"
+							styleClass="toolbar-button" disable="${controller.noTypeSelected}">
+							<graphic>
+								<ImageView>
+									<image>
+										<Image backgroundLoading="true" url="/jddb-icons/plus.png" />
+									</image>
+								</ImageView>
+							</graphic>
+						</Button>
 					</ToolBar>
 				</top>
 				<center>
-					<ListView fx:id="propertyList"/>
+					<ListView fx:id="propertyList" />
 				</center>
 			</BorderPane>
 		</SplitPane>
 	</center>
 	<bottom>
-		<Button text="%save" onAction="#save" disable="${controller.unsavable}"/>
+		<Button text="%save" onAction="#save" disable="${controller.unsavable}">
+			<graphic>
+				<ImageView>
+					<image>
+						<Image backgroundLoading="true" url="/jddb-icons/save.png" />
+					</image>
+				</ImageView>
+			</graphic>
+		</Button>
 	</bottom>
 </BorderPane>
