--- a/src/main/resources/fxml/jddb.fxml
+++ b/src/main/resources/fxml/jddb.fxml
@@ -44,7 +44,7 @@
 					</ImageView>
 				</graphic>
 			</Button>
-			<Button text="%configure" onAction="#showTypeEditor" disable="${appState.dbClosed}">
+			<Button text="%settings" onAction="#showTypeEditor" disable="${appState.dbClosed}">
 				<graphic>
 					<ImageView >
 						<image>
