--- a/src/main/resources/fxml/type_editor.fxml
+++ b/src/main/resources/fxml/type_editor.fxml
@@ -15,11 +15,26 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
+<?import javafx.scene.control.Tooltip?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml"
 	fx:controller="de.algorythm.jddb.controller.TypeEditorController">
 	<top>
-		<Label text="${controller.errorMessage}" styleClass="error" />
+		<HBox fillHeight="true">
+			<ListView fx:id="rootDirectoryList" prefHeight="90" HBox.hgrow="ALWAYS"/>
+			<Button onAction="#addRootDirectory">
+				<graphic>
+					<ImageView>
+						<image>
+							<Image backgroundLoading="true" url="/jddb-icons/plus_16.png" />
+						</image>
+					</ImageView>
+				</graphic>
+				<tooltip>
+					<Tooltip text="%add"/>
+				</tooltip>
+			</Button>
+		</HBox>
 	</top>
 	<center>
 		<SplitPane dividerPositions="0.4,0.6">
@@ -67,14 +82,17 @@
 		</SplitPane>
 	</center>
 	<bottom>
-		<Button text="%save" onAction="#save" disable="${controller.unsavable}">
-			<graphic>
-				<ImageView>
-					<image>
-						<Image backgroundLoading="true" url="/jddb-icons/tick_16.png" />
-					</image>
-				</ImageView>
-			</graphic>
-		</Button>
+		<HBox spacing="7">
+			<Button text="%save" onAction="#save" disable="${controller.unsavable}">
+				<graphic>
+					<ImageView>
+						<image>
+							<Image backgroundLoading="true" url="/jddb-icons/tick_16.png" />
+						</image>
+					</ImageView>
+				</graphic>
+			</Button>
+			<Label text="${controller.errorMessage}" styleClass="error" />
+		</HBox>
 	</bottom>
 </BorderPane>
